--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>지도탭</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9jMf6obZ66zmI_7Ho3bRrq5jMbiqjLFo&callback=initMap&libraries=&v=weekly"defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9YgSWGKsYgtCY4QnbUUvVl8cmj7c6V-k&libraries=places&callback=initMap"></script>
-    <link rel="stylesheet" href="/작업/map_css.css">
-    <script src="/kakaoMap_script.js"></script>
-    <script type="text/javascript" src="4d24ec45f428a239d3b99336225822d3"></script>
+    <title>카카오맵</title>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4d24ec45f428a239d3b99336225822d3"></script>
+	<link rel="stylesheet" href="/map_css.css">
 </head>
-
 <body>
-    <div class="title">
-      <input type="text" value="홈페이지 로고" id="logo">
-      <input type="text" value="메뉴" id="menu">
-    </div>
-    <div id="map"></div>
+	<div class="title">
+		<input type="text" value="홈페이지 로고" id="logo">
+		<input type="text" value="메뉴" id="menu">
+	</div>
+
+	<div id="map" style="width:500px;height:400px;"></div>
+
+
+
+<script src="/kakaoMap_script.js"></script>
 </body>
 </html>
-
-
-<!--할것: 장소 불러오기 api를 적용하면 됩니다 -->
