--- a/index.html
+++ b/index.html
@@ -2,20 +2,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카카오맵</title>
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4d24ec45f428a239d3b99336225822d3"></script>
-	<link rel="stylesheet" href="/map_css.css">
+    <title>멍냥펀치 로그인</title>
+    <link rel="stylesheet" href="css/loginStyle.css">
+    <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-	<div class="title">
-		<input type="text" value="홈페이지 로고" id="logo">
-		<input type="text" value="메뉴" id="menu">
-	</div>
+    <section class="login-form">
+        <img src="designSource/logo2/logo_transparent.png" style="height: 300px; width: 300px;">
+        <div>
+            <form action="">
+                <div class="int-area">
+                    <input type="text" name="id" id="id" autocomplete="off" required>
+                    <label for="id">아이디</label>
+                </div>
+                <div class="int-area">
+                    <input type="password" name="pw" id="pw" autocomplete="off" required>
+                    <label for="id">비밀번호</label>
+                </div>
+                <div class="btn-area">
+                    <button type="submit">로그인</button>
+                </div>
+            </form>
+            <div class="caption">
+                <a href="">비밀번호 찾기</a>
+            </div>
+        </div>
+        <div class="btn-container">
+            <div class="start-btn">
+                <button type="submit"><a href="main.html"><img src="designSource/ico/dogpawprint_89239.svg" id="start-ico"></a></button>
+                <p>둘러보기</p>
+            </div>
+            <div class="register-btn">
+                <button type="submit"><a href="register.html"><img src="designSource/ico/iconmonstr-building-1.svg" id="register-ico"></a></button>
+                <p>회원가입</p>
+            </div>
+        </div>
+    </section>
 
-	<div id="map" style="width:500px;height:400px;"></div>
-
-
-
-<script src="/kakaoMap_script.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
