--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>멍냥펀치 로그인</title>
-    <link rel="stylesheet" href="./css/loginStyle.css">
+    <link rel="stylesheet" href="css/loginStyle.css">
     <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
