--- a/KMJ/20210201_minjun/정보/puppyInfo.html
+++ b/KMJ/20210201_minjun/정보/puppyInfo.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <p>강아지 정보</p>
+
+    <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-0lax"></th>
+          </tr>
+        </thead>
+        </table>
 </body>
 </html>
