상세정보 다시
상세정보 수정

--- a/KMJ/20210201_minjun/정보/index.html
+++ b/KMJ/20210201_minjun/정보/index.html
@@ -12,21 +12,21 @@
 
 
         <div>
-            <a href="/정보/puppyInfo.html">
+            <a href="/puppyInfo.html">
             <img src="/images/강아지.jpg" id="dog">
             <p id="dog_text" >강아지</p>  
             </a>
         </div>
 
         <div>
-            <a href="/정보/catInfo.html">
+            <a href="/catInfo.html">
             <img src="/images/고양이.jpg" id="cat">
             <p id="cat_text" >고양이</p>  
             </a>
         </div>
 
         <div>
-            <a href="/정보/etcInfo.html">
+            <a href="/etcInfo.html">
             <img src="/images/etc.jpg" id="etc">
             <p id="etc_text" >ETC</p>  
             </a>
