페이지간 연결
게시판, 회원가입, 로그인 연동 필요

--- a/KMJ/20210201_minjun/작업/index.html
+++ b/KMJ/20210201_minjun/작업/index.html
@@ -8,11 +8,29 @@
 </head>
 <body>
 
-	<a href="/index.html"><div class="f_c">
-		<img src="/KMJ/20210201_minjun/images/logo_transparent_cut.png" style="height: 80px; width: 80px; ">
+
+<header id="Head">
+	<div class="service_header top">
+		<div class="wrap_inner">
+
+		   
+
+			<div class="f_c">
+				<a href="/main.html"><img src="/designSource/logo2/logo_transparent_cut.png" style="height: 80px; width: 80px;"></a>
+			</div>
+			
+		</div>
+		<ul class="nevigation">
+			<li><a href="/main.html" data-hover="">메인 화면</a></li>
+			<li><a href="#news">게시판</a></li>
+			<li><a href="/KMJ/20210201_minjun/작업/index.html">지도</a></li>
+			<li><a class="active" href="/KMJ/20210201_minjun/정보/index.html">정보</a></li>
+			<li style="float: right;"><a href="#contact" >로그인</a></li>
+			<li style="float: right;"><a href="#contact" >회원가입</a></li>
+		</ul>
 	</div>
-	</a>
-<br><br><br><br>
+	<div class="wrapSideMenu"></div>
+</header>
 
 
 
