--- a/KMJ/20210201_minjun/정보/puppyInfo.html
+++ b/KMJ/20210201_minjun/정보/puppyInfo.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>강아지 정보</title>
-    <link rel="stylesheet" href="info_css.css">
+    <link rel="stylesheet" href="/KMJ/20210201_minjun/정보/css/chart.css">
 </head>
 <body>
     <p>강아지 정보</p> <br><br>
