--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
                 <ul class="nevigation">
                     <li><a href="#home" data-hover="">메인 화면</a></li>
                     <li><a href="#news">게시판</a></li>
-                    <li><a href="#contact">지도</a></li>
-                    <li><a class="active" href="#about">정보</a></li>
+                    <li><a href="/KMJ/20210201_minjun/작업/index.html">지도</a></li>
+                    <li><a class="active" href="/KMJ/20210201_minjun/정보/index.html">정보</a></li>
                     <li style="float: right;"><a href="#contact" >로그인</a></li>
                     <li style="float: right;"><a href="#contact" >회원가입</a></li>
                 </ul>
