--- a/KMJ/작업/index.html
+++ b/KMJ/작업/index.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카카오맵</title>
+    <title>지도</title>
 	
-	<link rel="stylesheet" href="/KMJ/20210201_minjun/작업/map_css.css">
+	<link rel="stylesheet" href="/KMJ/작업/map_css.css">
 </head>
 <body>
 
@@ -23,8 +23,8 @@
 		<ul class="nevigation">
 			<li><a href="/main.html" data-hover="">메인 화면</a></li>
 			<li><a href="#news">게시판</a></li>
-			<li><a href="/KMJ/20210201_minjun/작업/index.html">지도</a></li>
-			<li><a class="active" href="/KMJ/20210201_minjun/정보/index.html">정보</a></li>
+			<li><a href="/KMJ/작업/index.html">지도</a></li>
+			<li><a class="active" href="/KMJ/정보/index.html">정보</a></li>
 			<li style="float: right;"><a href="#contact" >로그인</a></li>
 			<li style="float: right;"><a href="#contact" >회원가입</a></li>
 		</ul>
@@ -54,6 +54,6 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4d24ec45f428a239d3b99336225822d3&libraries=services"></script>
-	<script src="/KMJ/20210201_minjun/작업/kakaoMap_script.js"></script>
+	<script src="/KMJ/작업/kakaoMap_script.js"></script>
 </body>
 </html>
