--- a/KMJ/정보/etcInfo.html
+++ b/KMJ/정보/etcInfo.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기타 정보</title>
-    <link rel="stylesheet" href="/KMJ/20210201_minjun/정보/css/chart.css">
+    <link rel="stylesheet" href="/KMJ/정보/info_css.css">
 </head>
 <body>
     <p>기타 정보</p> <br><br>
 
-    <a href="/KMJ/20210201_minjun/정보/index.html">메뉴로 이동</a>
+    <a href="/KMJ/정보/index.html">메뉴로 이동</a>
 
     <table class="tg">
         <thead>
