--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
                     <li><a href="#news">게시판</a></li>
                     <li><a href="/KMJ/작업/index.html">지도</a></li>
                     <li><a class="active" href="/KMJ/정보/index.html">정보</a></li>
-                    <li style="float: right;"><a href="#contact" >로그인</a></li>
+                    <li style="float: right;"><a href="/index.html" >로그인</a></li>
                     <li style="float: right;"><a href="#contact" >회원가입</a></li>
                 </ul>
             </div>
