--- a/KMJ/작업/index.html
+++ b/KMJ/작업/index.html
@@ -43,8 +43,10 @@
 			<div class="option">
 				<div>
 					<form onsubmit="searchPlaces(); return false;">
-					 <input type="text" value="부천 동물병원" id="keyword" size="34" placeholder="지역, 위치를 입력하시오"> 
-						<button id="search_button"  type="submit"><img id="search_img" src="/KMJ/images/검색.jpg" alt=""></button> 
+						<input type="text" value="부천 동물병원" id="keyword" size="34" placeholder="지역, 위치를 입력하시오"> 
+						<!-- <div class="searchButton_wrapper"> -->
+							<button id="search_button"  type="submit"><img id="search_img" src="/KMJ/images/magnifying-glass.png" alt=""></button>
+						<!-- </div> -->
 					</form>
 				</div>
 			</div>
